# hdf5-rust

./: .gitmodules  .typos.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: read_write_mpi.rs  read_write_serial.rs
hdf5/: Cargo.toml  build.rs
hdf5-conda/: Cargo.toml  build.rs
hdf5-conda/src/: lib.rs
hdf5-derive/: Cargo.toml
hdf5-derive/src/: lib.rs
hdf5-src/: Cargo.toml  build.rs
hdf5-sys/: Cargo.toml  build.rs
hdf5-sys/src/: h5.rs  h5a.rs  h5d.rs  h5e.rs  h5f.rs  h5fd.rs  h5g.rs  h5o.rs  h5p.rs  h5r.rs  h5s.rs  h5t.rs  h5z.rs  lib.rs
hdf5-sys/src/hl/: h5do.rs  h5ds.rs  h5im.rs  h5lt.rs  h5pt.rs  h5tb.rs
hdf5-types/: Cargo.toml  build.rs
hdf5-types/src/: dyn_value.rs
hdf5/examples/: simple.rs
hdf5/src/: error.rs  globals.rs  sync.rs
hdf5/src/hl/: group.rs  location.rs
hdf5/tests/: test_dataset.rs  test_datatypes.rs  test_plist.rs
hdf5/tests/common/: gen.rs  util.rs
src/: error.rs  hl.rs  lib.rs
src/hl/: container.rs  dataset.rs  file.rs  filters.rs  group.rs  selection.rs
src/hl/plist/: dataset_create.rs  file_access.rs
tests/: test_plist.rs
